welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: reassignment to val
	if (litMessage=A)
                      ^